# DictionariesManager

./: LICENSE  README.md  main.py  pyproject.toml  settings.json
locales/: cs.json  en.json
src/services/: localization_service.py  settings_service.py
themes/: theme_dark.css
